--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,29 @@ jwt.secret=hamitmizrak
 
 
 ########################################################################
+### Thymeleaf ##########################################################
+#thymeleaf pasif yapt?m
+spring.thymeleaf.enabled=false
+
+# performans için teplate ön bellekte tutulabilinir. aktif yada pasif yap?yorum.
+Spring.thymeleaf.cache=true
+
+
+
+########################################################################
+### Actuator ###############################################################
+# actuator:projemiz hakk?nda bize bilgi verir. false yaparsam actuator kapat?l?r.
+management.endpoints.enabled-by-default=true
+
+# actuator heryerde erisimine izin verdim yani web erisim
+management.endpoints.web.exposure.include=*  
+
+# localhost:8080/actuator/health
+management.endpoints.web.base-path=/actuator 
+
+
+
+########################################################################
 ### Database  ########################################################
 ## H2Database
 logging.level.org.springframework.jdbc.core = TRACE
@@ -81,4 +104,6 @@ spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 #spring.datasource.username=system
 #spring.datasource.password=Password123
+
+
 
