--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,10 +38,10 @@ jwt.secret=hamitmizrak
 ########################################################################
 ### Thymeleaf ##########################################################
 #thymeleaf pasif yapt?m
-spring.thymeleaf.enabled=false
+spring.thymeleaf.enabled=true
 
-# performans için teplate ön bellekte tutulabilinir. aktif yada pasif yap?yorum.
-Spring.thymeleaf.cache=true
+## performans için teplate ön bellekte tutulabilinir. aktif yada pasif yap?yorum.
+#Spring.thymeleaf.cache=true
 
 
 
