--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,9 +36,20 @@ jwt.secret=hamitmizrak
 
 
 ########################################################################
+### INTERNATIONALIZATION  ##############################################
+#spring.messages.basename=messages
+#spring.messages.cacheSeconds=-1
+spring.messages.encoding=UTF-8
+
+
+
+
+########################################################################
 ### Thymeleaf ##########################################################
 #thymeleaf pasif yapt?m
 spring.thymeleaf.enabled=true
+#spring.thymeleaf.encoding=UTF-8
+#spring.thymeleaf.content-type=text/html
 
 ## performans için teplate ön bellekte tutulabilinir. aktif yada pasif yap?yorum.
 #Spring.thymeleaf.cache=true
@@ -107,6 +118,9 @@ spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 #spring.datasource.username=system
 #spring.datasource.password=Password123
+
+
+
 
 
 
