--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!--  json web token-->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -57,6 +63,7 @@
             <version>0.9.1</version>
         </dependency>
 
+        <!--NOT: Unutma defaultta rest json dondurur-->
         <!-- JSON işlemleri için gson-->
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -64,11 +71,16 @@
             <version>2.8.6</version>
         </dependency>
 
+
+        <!--NOT: bu kutuphane restte default olarak gelen Json yapısını XML'cevirir.-->
+        <!--jackson: Json To Xml-->
+<!--
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
-            <scope>test</scope>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
         </dependency>
+-->
+
 
         <!--TEST-->
         <dependency>
